WorkingSemantic/y.output
Grammar

    0 $accept: program_unit $end

    1 program_unit: HEADER program_unit
    2             | DEFINE primary_exp program_unit
    3             | translation_unit

    4 translation_unit: external_decl
    5                 | translation_unit external_decl

    6 external_decl: function_definition
    7              | decl

    8 function_definition: decl_specs declarator decl_list compound_stat
    9                    | declarator decl_list compound_stat
   10                    | decl_specs declarator compound_stat
   11                    | declarator compound_stat

   12 decl: decl_specs init_declarator_list ';'
   13     | decl_specs ';'

   14 decl_list: decl
   15          | decl_list decl

   16 decl_specs: storage_class_spec decl_specs
   17           | storage_class_spec
   18           | type_spec decl_specs
   19           | type_spec
   20           | type_qualifier decl_specs
   21           | type_qualifier

   22 storage_class_spec: storage_const

   23 type_spec: type_const
   24          | struct_or_union_spec
   25          | enum_spec
   26          | typedef_name

   27 type_qualifier: qual_const

   28 struct_or_union_spec: struct_or_union id '{' struct_decl_list '}'
   29                     | struct_or_union int_id '{' struct_decl_list '}'
   30                     | struct_or_union float_id '{' struct_decl_list '}'
   31                     | struct_or_union char_id '{' struct_decl_list '}'
   32                     | struct_or_union '{' struct_decl_list '}'
   33                     | struct_or_union id
   34                     | struct_or_union int_id
   35                     | struct_or_union float_id
   36                     | struct_or_union char_id

   37 struct_or_union: struct_const

   38 struct_decl_list: struct_decl
   39                 | struct_decl_list struct_decl

   40 init_declarator_list: init_declarator
   41                     | init_declarator_list ',' init_declarator

   42 init_declarator: declarator
   43                | declarator '=' initializer

   44 struct_decl: spec_qualifier_list struct_declarator_list ';'

   45 spec_qualifier_list: type_spec spec_qualifier_list
   46                    | type_spec
   47                    | type_qualifier spec_qualifier_list
   48                    | type_qualifier

   49 struct_declarator_list: struct_declarator
   50                       | struct_declarator_list ',' struct_declarator

   51 struct_declarator: declarator
   52                  | declarator ':' const_exp
   53                  | ':' const_exp

   54 enum_spec: enum_const id '{' enumerator_list '}'
   55          | enum_const int_id '{' enumerator_list '}'
   56          | enum_const float_id '{' enumerator_list '}'
   57          | enum_const char_id '{' enumerator_list '}'
   58          | enum_const '{' enumerator_list '}'
   59          | enum_const id
   60          | enum_const int_id
   61          | enum_const float_id
   62          | enum_const char_id

   63 enumerator_list: enumerator
   64                | enumerator_list ',' enumerator

   65 enumerator: id
   66           | int_id
   67           | float_id
   68           | char_id
   69           | id '=' const_exp
   70           | int_id '=' const_exp
   71           | float_id '=' const_exp
   72           | char_id '=' const_exp

   73 declarator: pointer direct_declarator
   74           | direct_declarator

   75 direct_declarator: id
   76                  | int_id
   77                  | float_id
   78                  | char_id
   79                  | '(' declarator ')'
   80                  | direct_declarator '[' const_exp ']'
   81                  | direct_declarator '[' ']'
   82                  | direct_declarator '(' param_type_list ')'
   83                  | direct_declarator '(' id_list ')'
   84                  | direct_declarator '(' ')'

   85 pointer: '*' type_qualifier_list
   86        | '*'
   87        | '*' type_qualifier_list pointer
   88        | '*' pointer

   89 type_qualifier_list: type_qualifier
   90                    | type_qualifier_list type_qualifier

   91 param_type_list: param_list
   92                | param_list ',' param_const

   93 param_list: param_decl
   94           | param_list ',' param_decl

   95 param_decl: decl_specs declarator
   96           | decl_specs abstract_declarator
   97           | decl_specs

   98 id_list: id
   99        | int_id
  100        | float_id
  101        | char_id
  102        | id_list ',' id
  103        | id_list ',' int_id
  104        | id_list ',' float_id
  105        | id_list ',' char_id

  106 initializer: assignment_exp
  107            | '{' initializer_list '}'
  108            | '{' initializer_list ',' '}'

  109 initializer_list: initializer
  110                 | initializer_list ',' initializer

  111 type_name: spec_qualifier_list abstract_declarator
  112          | spec_qualifier_list

  113 abstract_declarator: pointer
  114                    | pointer direct_abstract_declarator
  115                    | direct_abstract_declarator

  116 direct_abstract_declarator: '(' abstract_declarator ')'
  117                           | direct_abstract_declarator '[' const_exp ']'
  118                           | '[' const_exp ']'
  119                           | direct_abstract_declarator '[' ']'
  120                           | '[' ']'
  121                           | direct_abstract_declarator '(' param_type_list ')'
  122                           | '(' param_type_list ')'
  123                           | direct_abstract_declarator '(' ')'
  124                           | '(' ')'

  125 typedef_name: 't'

  126 stat: labeled_stat
  127     | exp_stat
  128     | compound_stat
  129     | selection_stat
  130     | iteration_stat
  131     | jump_stat

  132 labeled_stat: id ':' stat
  133             | int_id ':' stat
  134             | float_id ':' stat
  135             | char_id ':' stat
  136             | CASE const_exp ':' stat
  137             | DEFAULT ':' stat

  138 exp_stat: exp ';'
  139         | ';'

  140 compound_stat: '{' decl_list stat_list '}'
  141              | '{' stat_list '}'
  142              | '{' decl_list '}'
  143              | '{' '}'

  144 stat_list: stat
  145          | stat_list stat

  146 selection_stat: IF '(' exp ')' stat
  147               | IF '(' exp ')' stat ELSE stat
  148               | SWITCH '(' exp ')' stat

  149 iteration_stat: WHILE '(' exp ')' stat
  150               | DO stat WHILE '(' exp ')' ';'
  151               | FOR '(' exp ';' exp ';' exp ')' stat
  152               | FOR '(' exp ';' exp ';' ')' stat
  153               | FOR '(' exp ';' ';' exp ')' stat
  154               | FOR '(' exp ';' ';' ')' stat
  155               | FOR '(' ';' exp ';' exp ')' stat
  156               | FOR '(' ';' exp ';' ')' stat
  157               | FOR '(' ';' ';' exp ')' stat
  158               | FOR '(' ';' ';' ')' stat

  159 jump_stat: GOTO id ';'
  160          | GOTO int_id ';'
  161          | GOTO float_id ';'
  162          | GOTO char_id ';'
  163          | CONTINUE ';'
  164          | BREAK ';'
  165          | RETURN exp ';'
  166          | RETURN ';'

  167 exp: assignment_exp
  168    | exp ',' assignment_exp

  169 assignment_exp: conditional_exp
  170               | unary_exp assignment_operator assignment_exp

  171 assignment_operator: PUNC
  172                    | '='

  173 conditional_exp: logical_or_exp
  174                | logical_or_exp '?' exp ':' conditional_exp

  175 const_exp: conditional_exp

  176 logical_or_exp: logical_and_exp
  177               | logical_or_exp or_const logical_and_exp

  178 logical_and_exp: inclusive_or_exp
  179                | logical_and_exp and_const inclusive_or_exp

  180 inclusive_or_exp: exclusive_or_exp
  181                 | inclusive_or_exp '|' exclusive_or_exp

  182 exclusive_or_exp: and_exp
  183                 | exclusive_or_exp '^' and_exp

  184 and_exp: equality_exp
  185        | and_exp '&' equality_exp

  186 equality_exp: relational_exp
  187             | equality_exp eq_const relational_exp

  188 relational_exp: shift_expression
  189               | relational_exp '<' shift_expression
  190               | relational_exp '>' shift_expression
  191               | relational_exp rel_const shift_expression

  192 shift_expression: additive_exp
  193                 | shift_expression shift_const additive_exp

  194 additive_exp: mult_exp
  195             | additive_exp '+' mult_exp
  196             | additive_exp '-' mult_exp

  197 mult_exp: cast_exp
  198         | mult_exp '*' cast_exp
  199         | mult_exp '/' cast_exp
  200         | mult_exp '%' cast_exp

  201 cast_exp: unary_exp
  202         | '(' type_name ')' cast_exp

  203 unary_exp: postfix_exp
  204          | inc_const unary_exp
  205          | unary_operator cast_exp
  206          | SIZEOF unary_exp
  207          | SIZEOF '(' type_name ')'

  208 unary_operator: '&'
  209               | '*'
  210               | '+'
  211               | '-'
  212               | '~'
  213               | '!'

  214 postfix_exp: primary_exp
  215            | postfix_exp '[' exp ']'
  216            | postfix_exp '(' argument_exp_list ')'
  217            | postfix_exp '(' ')'
  218            | postfix_exp '.' id
  219            | postfix_exp '.' int_id
  220            | postfix_exp '.' float_id
  221            | postfix_exp '.' char_id
  222            | postfix_exp point_const id
  223            | postfix_exp point_const int_id
  224            | postfix_exp point_const float_id
  225            | postfix_exp point_const char_id
  226            | postfix_exp inc_const

  227 primary_exp: id
  228            | int_id
  229            | float_id
  230            | char_id
  231            | consts
  232            | string
  233            | '(' exp ')'

  234 argument_exp_list: assignment_exp
  235                  | argument_exp_list ',' assignment_exp

  236 consts: int_const
  237       | char_const
  238       | float_const
  239       | enumeration_const


Terminals, with rules where they appear

$end (0) 0
'!' (33) 213
'%' (37) 200
'&' (38) 185 208
'(' (40) 79 82 83 84 116 121 122 123 124 146 147 148 149 150 151 152
    153 154 155 156 157 158 202 207 216 217 233
')' (41) 79 82 83 84 116 121 122 123 124 146 147 148 149 150 151 152
    153 154 155 156 157 158 202 207 216 217 233
'*' (42) 85 86 87 88 198 209
'+' (43) 195 210
',' (44) 41 50 64 92 94 102 103 104 105 108 110 168 235
'-' (45) 196 211
'.' (46) 218 219 220 221
'/' (47) 199
':' (58) 52 53 132 133 134 135 136 137 174
';' (59) 12 13 44 138 139 150 151 152 153 154 155 156 157 158 159 160
    161 162 163 164 165 166
'<' (60) 189
'=' (61) 43 69 70 71 72 172
'>' (62) 190
'?' (63) 174
'[' (91) 80 81 117 118 119 120 215
']' (93) 80 81 117 118 119 120 215
'^' (94) 183
't' (116) 125
'{' (123) 28 29 30 31 32 54 55 56 57 58 107 108 140 141 142 143
'|' (124) 181
'}' (125) 28 29 30 31 32 54 55 56 57 58 107 108 140 141 142 143
'~' (126) 212
error (256)
int_const (258) 236
char_const (259) 237
float_const (260) 238
id (261) 28 33 54 59 65 69 75 98 102 132 159 218 222 227
int_id (262) 29 34 55 60 66 70 76 99 103 133 160 219 223 228
float_id (263) 30 35 56 61 67 71 77 100 104 134 161 220 224 229
char_id (264) 31 36 57 62 68 72 78 101 105 135 162 221 225 230
string (265) 232
enumeration_const (266) 239
storage_const (267) 22
type_const (268) 23
qual_const (269) 27
struct_const (270) 37
enum_const (271) 54 55 56 57 58 59 60 61 62
DEFINE (272) 2
IF (273) 146 147
FOR (274) 151 152 153 154 155 156 157 158
DO (275) 150
WHILE (276) 149 150
BREAK (277) 164
SWITCH (278) 148
CONTINUE (279) 163
RETURN (280) 165 166
CASE (281) 136
DEFAULT (282) 137
GOTO (283) 159 160 161 162
SIZEOF (284) 206 207
PUNC (285) 171
or_const (286) 177
and_const (287) 179
eq_const (288) 187
shift_const (289) 193
rel_const (290) 191
inc_const (291) 204 226
point_const (292) 222 223 224 225
param_const (293) 92
ELSE (294) 147
HEADER (295) 1
"then" (296)


Nonterminals, with rules where they appear

$accept (67)
    on left: 0
program_unit (68)
    on left: 1 2 3, on right: 0 1 2
translation_unit (69)
    on left: 4 5, on right: 3 5
external_decl (70)
    on left: 6 7, on right: 4 5
function_definition (71)
    on left: 8 9 10 11, on right: 6
decl (72)
    on left: 12 13, on right: 7 14 15
decl_list (73)
    on left: 14 15, on right: 8 9 15 140 142
decl_specs (74)
    on left: 16 17 18 19 20 21, on right: 8 10 12 13 16 18 20 95 96
    97
storage_class_spec (75)
    on left: 22, on right: 16 17
type_spec (76)
    on left: 23 24 25 26, on right: 18 19 45 46
type_qualifier (77)
    on left: 27, on right: 20 21 47 48 89 90
struct_or_union_spec (78)
    on left: 28 29 30 31 32 33 34 35 36, on right: 24
struct_or_union (79)
    on left: 37, on right: 28 29 30 31 32 33 34 35 36
struct_decl_list (80)
    on left: 38 39, on right: 28 29 30 31 32 39
init_declarator_list (81)
    on left: 40 41, on right: 12 41
init_declarator (82)
    on left: 42 43, on right: 40 41
struct_decl (83)
    on left: 44, on right: 38 39
spec_qualifier_list (84)
    on left: 45 46 47 48, on right: 44 45 47 111 112
struct_declarator_list (85)
    on left: 49 50, on right: 44 50
struct_declarator (86)
    on left: 51 52 53, on right: 49 50
enum_spec (87)
    on left: 54 55 56 57 58 59 60 61 62, on right: 25
enumerator_list (88)
    on left: 63 64, on right: 54 55 56 57 58 64
enumerator (89)
    on left: 65 66 67 68 69 70 71 72, on right: 63 64
declarator (90)
    on left: 73 74, on right: 8 9 10 11 42 43 51 52 79 95
direct_declarator (91)
    on left: 75 76 77 78 79 80 81 82 83 84, on right: 73 74 80 81 82
    83 84
pointer (92)
    on left: 85 86 87 88, on right: 73 87 88 113 114
type_qualifier_list (93)
    on left: 89 90, on right: 85 87 90
param_type_list (94)
    on left: 91 92, on right: 82 121 122
param_list (95)
    on left: 93 94, on right: 91 92 94
param_decl (96)
    on left: 95 96 97, on right: 93 94
id_list (97)
    on left: 98 99 100 101 102 103 104 105, on right: 83 102 103 104
    105
initializer (98)
    on left: 106 107 108, on right: 43 109 110
initializer_list (99)
    on left: 109 110, on right: 107 108 110
type_name (100)
    on left: 111 112, on right: 202 207
abstract_declarator (101)
    on left: 113 114 115, on right: 96 111 116
direct_abstract_declarator (102)
    on left: 116 117 118 119 120 121 122 123 124, on right: 114 115
    117 119 121 123
typedef_name (103)
    on left: 125, on right: 26
stat (104)
    on left: 126 127 128 129 130 131, on right: 132 133 134 135 136
    137 144 145 146 147 148 149 150 151 152 153 154 155 156 157 158
labeled_stat (105)
    on left: 132 133 134 135 136 137, on right: 126
exp_stat (106)
    on left: 138 139, on right: 127
compound_stat (107)
    on left: 140 141 142 143, on right: 8 9 10 11 128
stat_list (108)
    on left: 144 145, on right: 140 141 145
selection_stat (109)
    on left: 146 147 148, on right: 129
iteration_stat (110)
    on left: 149 150 151 152 153 154 155 156 157 158, on right: 130
jump_stat (111)
    on left: 159 160 161 162 163 164 165 166, on right: 131
exp (112)
    on left: 167 168, on right: 138 146 147 148 149 150 151 152 153
    154 155 156 157 165 168 174 215 233
assignment_exp (113)
    on left: 169 170, on right: 106 167 168 170 234 235
assignment_operator (114)
    on left: 171 172, on right: 170
conditional_exp (115)
    on left: 173 174, on right: 169 174 175
const_exp (116)
    on left: 175, on right: 52 53 69 70 71 72 80 117 118 136
logical_or_exp (117)
    on left: 176 177, on right: 173 174 177
logical_and_exp (118)
    on left: 178 179, on right: 176 177 179
inclusive_or_exp (119)
    on left: 180 181, on right: 178 179 181
exclusive_or_exp (120)
    on left: 182 183, on right: 180 181 183
and_exp (121)
    on left: 184 185, on right: 182 183 185
equality_exp (122)
    on left: 186 187, on right: 184 185 187
relational_exp (123)
    on left: 188 189 190 191, on right: 186 187 189 190 191
shift_expression (124)
    on left: 192 193, on right: 188 189 190 191 193
additive_exp (125)
    on left: 194 195 196, on right: 192 193 195 196
mult_exp (126)
    on left: 197 198 199 200, on right: 194 195 196 198 199 200
cast_exp (127)
    on left: 201 202, on right: 197 198 199 200 202 205
unary_exp (128)
    on left: 203 204 205 206 207, on right: 170 201 204 206
unary_operator (129)
    on left: 208 209 210 211 212 213, on right: 205
postfix_exp (130)
    on left: 214 215 216 217 218 219 220 221 222 223 224 225 226, on right:
    203 215 216 217 218 219 220 221 222 223 224 225 226
primary_exp (131)
    on left: 227 228 229 230 231 232 233, on right: 2 214
argument_exp_list (132)
    on left: 234 235, on right: 216 235
consts (133)
    on left: 236 237 238 239, on right: 231


State 0

    0 $accept: . program_unit $end

    id             shift, and go to state 1
    int_id         shift, and go to state 2
    float_id       shift, and go to state 3
    char_id        shift, and go to state 4
    storage_const  shift, and go to state 5
    type_const     shift, and go to state 6
    qual_const     shift, and go to state 7
    struct_const   shift, and go to state 8
    enum_const     shift, and go to state 9
    DEFINE         shift, and go to state 10
    HEADER         shift, and go to state 11
    '*'            shift, and go to state 12
    '('            shift, and go to state 13
    't'            shift, and go to state 14

    program_unit          go to state 15
    translation_unit      go to state 16
    external_decl         go to state 17
    function_definition   go to state 18
    decl                  go to state 19
    decl_specs            go to state 20
    storage_class_spec    go to state 21
    type_spec             go to state 22
    type_qualifier        go to state 23
    struct_or_union_spec  go to state 24
    struct_or_union       go to state 25
    enum_spec             go to state 26
    declarator            go to state 27
    direct_declarator     go to state 28
    pointer               go to state 29
    typedef_name          go to state 30


State 1

   75 direct_declarator: id .

    $default  reduce using rule 75 (direct_declarator)


State 2

   76 direct_declarator: int_id .

    $default  reduce using rule 76 (direct_declarator)


State 3

   77 direct_declarator: float_id .

    $default  reduce using rule 77 (direct_declarator)


State 4

   78 direct_declarator: char_id .

    $default  reduce using rule 78 (direct_declarator)


State 5

   22 storage_class_spec: storage_const .

    $default  reduce using rule 22 (storage_class_spec)


State 6

   23 type_spec: type_const .

    $default  reduce using rule 23 (type_spec)


State 7

   27 type_qualifier: qual_const .

    $default  reduce using rule 27 (type_qualifier)


State 8

   37 struct_or_union: struct_const .

    $default  reduce using rule 37 (struct_or_union)


State 9

   54 enum_spec: enum_const . id '{' enumerator_list '}'
   55          | enum_const . int_id '{' enumerator_list '}'
   56          | enum_const . float_id '{' enumerator_list '}'
   57          | enum_const . char_id '{' enumerator_list '}'
   58          | enum_const . '{' enumerator_list '}'
   59          | enum_const . id
   60          | enum_const . int_id
   61          | enum_const . float_id
   62          | enum_const . char_id

    id        shift, and go to state 31
    int_id    shift, and go to state 32
    float_id  shift, and go to state 33
    char_id   shift, and go to state 34
    '{'       shift, and go to state 35


State 10

    2 program_unit: DEFINE . primary_exp program_unit

    int_const          shift, and go to state 36
    char_const         shift, and go to state 37
    float_const        shift, and go to state 38
    id                 shift, and go to state 39
    int_id             shift, and go to state 40
    float_id           shift, and go to state 41
    char_id            shift, and go to state 42
    string             shift, and go to state 43
    enumeration_const  shift, and go to state 44
    '('                shift, and go to state 45

    primary_exp  go to state 46
    consts       go to state 47


State 11

    1 program_unit: HEADER . program_unit

    id             shift, and go to state 1
    int_id         shift, and go to state 2
    float_id       shift, and go to state 3
    char_id        shift, and go to state 4
    storage_const  shift, and go to state 5
    type_const     shift, and go to state 6
    qual_const     shift, and go to state 7
    struct_const   shift, and go to state 8
    enum_const     shift, and go to state 9
    DEFINE         shift, and go to state 10
    HEADER         shift, and go to state 11
    '*'            shift, and go to state 12
    '('            shift, and go to state 13
    't'            shift, and go to state 14

    program_unit          go to state 48
    translation_unit      go to state 16
    external_decl         go to state 17
    function_definition   go to state 18
    decl                  go to state 19
    decl_specs            go to state 20
    storage_class_spec    go to state 21
    type_spec             go to state 22
    type_qualifier        go to state 23
    struct_or_union_spec  go to state 24
    struct_or_union       go to state 25
    enum_spec             go to state 26
    declarator            go to state 27
    direct_declarator     go to state 28
    pointer               go to state 29
    typedef_name          go to state 30


State 12

   85 pointer: '*' . type_qualifier_list
   86        | '*' .
   87        | '*' . type_qualifier_list pointer
   88        | '*' . pointer

    qual_const  shift, and go to state 7
    '*'         shift, and go to state 12

    $default  reduce using rule 86 (pointer)

    type_qualifier       go to state 49
    pointer              go to state 50
    type_qualifier_list  go to state 51


State 13

   79 direct_declarator: '(' . declarator ')'

    id        shift, and go to state 1
    int_id    shift, and go to state 2
    float_id  shift, and go to state 3
    char_id   shift, and go to state 4
    '*'       shift, and go to state 12
    '('       shift, and go to state 13

    declarator         go to state 52
    direct_declarator  go to state 28
    pointer            go to state 29


State 14

  125 typedef_name: 't' .

    $default  reduce using rule 125 (typedef_name)


State 15

    0 $accept: program_unit . $end

    $end  shift, and go to state 53


State 16

    3 program_unit: translation_unit .
    5 translation_unit: translation_unit . external_decl

    id             shift, and go to state 1
    int_id         shift, and go to state 2
    float_id       shift, and go to state 3
    char_id        shift, and go to state 4
    storage_const  shift, and go to state 5
    type_const     shift, and go to state 6
    qual_const     shift, and go to state 7
    struct_const   shift, and go to state 8
    enum_const     shift, and go to state 9
    '*'            shift, and go to state 12
    '('            shift, and go to state 13
    't'            shift, and go to state 14

    $default  reduce using rule 3 (program_unit)

    external_decl         go to state 54
    function_definition   go to state 18
    decl                  go to state 19
    decl_specs            go to state 20
    storage_class_spec    go to state 21
    type_spec             go to state 22
    type_qualifier        go to state 23
    struct_or_union_spec  go to state 24
    struct_or_union       go to state 25
    enum_spec             go to state 26
    declarator            go to state 27
    direct_declarator     go to state 28
    pointer               go to state 29
    typedef_name          go to state 30


State 17

    4 translation_unit: external_decl .

    $default  reduce using rule 4 (translation_unit)


State 18

    6 external_decl: function_definition .

    $default  reduce using rule 6 (external_decl)


State 19

    7 external_decl: decl .

    $default  reduce using rule 7 (external_decl)


State 20

    8 function_definition: decl_specs . declarator decl_list compound_stat
   10                    | decl_specs . declarator compound_stat
   12 decl: decl_specs . init_declarator_list ';'
   13     | decl_specs . ';'

    id        shift, and go to state 1
    int_id    shift, and go to state 2
    float_id  shift, and go to state 3
    char_id   shift, and go to state 4
    '*'       shift, and go to state 12
    ';'       shift, and go to state 55
    '('       shift, and go to state 13

    init_declarator_list  go to state 56
    init_declarator       go to state 57
    declarator            go to state 58
    direct_declarator     go to state 28
    pointer               go to state 29


State 21

   16 decl_specs: storage_class_spec . decl_specs
   17           | storage_class_spec .
